--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -291,7 +291,7 @@ TakeRecorderWorldSourceSettings=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal,MaterialEditorInstanceConstant.ParameterGroups.Roughness,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
 MaterialInstanceConstant=
 Actor=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
-SceneComponent=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
+SceneComponent=PostProcessVolume.Lens.Lens,Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList
 PointLight=Actor.TransformCommon.Transform,PointLight.TransformCommon.Transform
 SpotLight=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
 StaticMeshActor=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
@@ -309,7 +309,7 @@ SkyLight=SkyLight.TransformCommon.Transform
 Light=Actor.TransformCommon.Transform,SpotLight.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,PostProcessVolume.Lens.Lens
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Environment/Pictures/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -360,7 +360,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Environment/Pictures/Models
+ContentBrowserDrawer.SelectedPaths=/Game/Environment/Custom_Props/Models/cocktail_pack/Models
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1598,7 +1598,7 @@ MaterialExpressionLandscapePhysicalMaterialOutput="\"Object\" "
 MaterialExpressionCustomOutput="\"Object\" "
 MaterialExpressionLandscapeLayerBlend="\"Object\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 AssetViewerSettings="\"Object\" "
 MeshPaintModeSettings="\"Object\" "
 MeshColorPaintingToolProperties="\"Object\" "
@@ -1632,8 +1632,8 @@ NavigationData="\"Object\" \"Object.Display.TileGenerationDebug\" \"Object.Gener
 WorldSettings="\"Object\" \"Object.Lightmass.LightmassSettings\" "
 Info="\"Object\" \"Object.Lightmass.LightmassSettings\" "
 PointLight="\"Object\" \"Object.Light.PointLightComponent.Object.Light.LightingChannels\" "
-Light="\"Object\" "
-SpotLight="\"Object\" "
+Light="\"Object\" \"Object.Light.SpotLightComponent.Object.Light.LightingChannels\" "
+SpotLight="\"Object\" \"Object.Light.SpotLightComponent.Object.Light.LightingChannels\" "
 StaticMeshActor="\"Object\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 DirectionalLight="\"Object\" "
 LandscapeStreamingProxy="\"Object.Lightmass.LightmassSettings\" "
@@ -1694,16 +1694,22 @@ FbxSceneImportOptionsSkeletalMesh="\"Object\" \"Object.SkeletalMesh.SkeletalMesh
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=UVEditor0000041A4CD9A510
 RecentAssetEditors=UVEditor0000041ADB282D10
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -1718,54 +1724,38 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Devil.SM_Frame_Devil
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Grim.SM_Frame_Grim
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Cossack.SM_Frame_Cossack
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Mountains.SM_Frame_Mountains
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Toad.SM_Frame_Toad
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Mountains.SM_Frame_Mountains
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Ghost.SM_Frame_Ghost
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Toad.SM_Frame_Toad
-OpenAssetsAtExit=/Game/Environment/Pictures/Models/SM_Frame_Alpha.SM_Frame_Alpha
-OpenAssetsAtExit=/Game/Environment/Pictures/Textures/T_Prop_01_A.T_Prop_01_A
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Environment/Pictures/Textures/T_Prop_01_A
-MRUItem1=/Game/Environment/Pictures/Models/SM_Frame_Toad
-MRUItem2=/Game/Environment/Pictures/Models/SM_Frame_Mountains
-MRUItem3=/Game/Environment/Bar_Assets/Materials/MI_Prop_10
-MRUItem4=/Game/Environment/Bar_Assets/Materials/M_Light
-MRUItem5=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A1
-MRUItem6=/Game/Environment/Bar_Assets/Materials/M_BaseTransparent
-MRUItem7=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Liquid
-MRUItem8=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
-MRUItem9=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
-MRUItem10=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Transparent1
-MRUItem11=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
-MRUItem12=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-MRUItem13=/Game/Environment/Bar_Assets/Materials/M_Basematerial
-MRUItem14=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
-MRUItem15=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
-MRUItem16=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_middle
-MRUItem17=/Game/Environment/Bar_Assets/Materials/MI_Prop_05
-MRUItem18=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_top
-MRUItem19=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/jigger
-MRUItem20=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
-MRUItem21=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
-MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
-MRUItem23=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail
-MRUItem24=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
-MRUItem25=/Game/Environment/Bar_Assets/Textures/T_DefaultOpacity
-MRUItem26=/Game/Environment/Bar_Assets/Materials/MI_Prop_07
-MRUItem27=/Game/Environment/Bar_Assets/Textures/T_Prop_11_A
-MRUItem28=/Game/Environment/Bar_Assets/Materials/MI_Prop_11
-MRUItem29=/Game/Bar_Assets/Materials/MI_Prop_07
+MRUItem0=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Transparent1
+MRUItem1=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Liquid
+MRUItem2=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
+MRUItem3=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A1
+MRUItem4=/Game/Environment/Bar_Assets/Materials/M_BaseTransparent
+MRUItem5=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
+MRUItem6=/Engine/MapTemplates/Materials/BasicAsset03
+MRUItem7=/Engine/EngineMeshes/BackgroundMaterial
+MRUItem8=/Game/DANTE_SHADER_CHECK
+MRUItem9=/Game/Bar_Assets/Textures/T_Prop_10_A
+MRUItem10=/Game/Environment/Bar_Assets/Materials/MI_Prop_10
+MRUItem11=/Game/Environment/Bar_Assets/Models/SM_Bottle_01
+MRUItem12=/Game/Environment/Pictures/Textures/T_Prop_01_A
+MRUItem13=/Game/Environment/Pictures/Models/SM_Frame_Toad
+MRUItem14=/Game/Environment/Pictures/Models/SM_Frame_Mountains
+MRUItem15=/Game/Environment/Bar_Assets/Materials/M_Light
+MRUItem16=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
+MRUItem17=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
+MRUItem18=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
+MRUItem19=/Game/Environment/Bar_Assets/Materials/M_Basematerial
+MRUItem20=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
+MRUItem21=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
+MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_middle
+MRUItem23=/Game/Environment/Bar_Assets/Materials/MI_Prop_05
+MRUItem24=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/shaker_top
+MRUItem25=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/jigger
+MRUItem26=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
+MRUItem27=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
+MRUItem28=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail
+MRUItem29=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2839,6 +2829,9 @@ SkyLight.LevelInstance=True
 /Game/Environment/Pictures/Models/SM_Frame_Ghost.SM_Frame_Ghost=1
 /Game/Environment/Pictures/Models/SM_Frame_Alpha.SM_Frame_Alpha=1
 /Game/Environment/Pictures/Textures/T_Prop_01_A.T_Prop_01_A=1
+/Game/Environment/Bar_Assets/Models/SM_Bottle_01.SM_Bottle_01=1
+/Engine/EngineMeshes/BackgroundMaterial.BackgroundMaterial=1
+/Engine/MapTemplates/Materials/BasicAsset03.BasicAsset03=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2905,7 +2898,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=129.600 Y=72.800
-WindowSize=X=1318.400 Y=817.600
+WindowSize=X=1323.200 Y=822.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2927,7 +2920,7 @@ BRUSH=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7
 FBX=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/
 FBXAnim=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/
 GenericImport=../../../../Users/ASUS/Documents/maya/projects/default/scenes/7_Sins_Maya/Cocktails/envy_cocktail.fbx
-GenericExport=../../../../Users/ASUS/Downloads/SM_Frame_08.FBX
+GenericExport=../../../../Users/ASUS/Downloads/sloth_cocktail.FBX
 GenericOpen=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/
 GenericSave=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/
 MeshImportExport=../../../../../../Users/harry/Documents/Uni/Advanced Specialised Project/7-Sins/Project_7_Sins/Content/
@@ -3282,10 +3275,10 @@ FbxExportCompatibility=FBX_2020
 bASCII=False
 bForceFrontXAxis=False
 VertexColor=True
-LevelOfDetail=True
-Collision=True
-bExportSourceMesh=False
-bExportMorphTargets=True
+LevelOfDetail=False
+Collision=False
+bExportSourceMesh=True
+bExportMorphTargets=False
 bExportPreviewMesh=False
 MapSkeletalMotionToRoot=False
 bExportLocalTime=True
@@ -3447,6 +3440,7 @@ Texture2D.Compositing=True
 Texture2D.Texture=True
 RectLight.Rendering=True
 FbxSceneImportOptionsSkeletalMesh.Animation=True
+FbxExportOption.Exporter=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
