--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,7 +174,7 @@ MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -305,7 +305,7 @@ PostProcessVolume=PostProcessVolume.Lens.Lens
 BrushComponent=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Environment/Bar_Assets/neon_lights
+ContentBrowserTab1.SelectedPaths=/Game/Environment/Bar_Assets/neon_lights/Textures
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1701,11 +1701,12 @@ MaterialExpressionEyeAdaptationInverse="\"Object\" "
 GLTFProxyOptions="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialInstanceEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -1732,37 +1733,39 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
+OpenAssetsAtExit=/Game/Environment/Bar_Assets/7SINS.7SINS
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Environment/Bar_Assets/neon_lights/Textures/T_Neons_Emissive
-MRUItem1=/Game/Environment/Bar_Assets/neon_lights/Textures/T_Neons_BASECOLOUR
-MRUItem2=/Game/Environment/Bar_Assets/neon_lights/Materials/MI_Neon_Lights
-MRUItem3=/Game/Environment/jess_props/Materials/props_material_jess
-MRUItem4=/Game/Environment/jess_props/Textures/T_PROPS_BASECOLOUR
-MRUItem5=/Game/Environment/Bar_Assets/Materials/M_Minigame_props
-MRUItem6=/Game/Environment/Bar_Assets/neon_lights/Models/Pride_Sign_PRIDE
-MRUItem7=/Game/Environment/Bar_Assets/Materials/MI_Floor_01
-MRUItem8=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem9=/Game/Environment/Bar_Assets/Materials/M_Basematerial
-MRUItem10=/Game/Environment/Bar_Assets/neon_lights/Models/Wrath_Sign
-MRUItem11=/Game/Environment/Bar_Assets/neon_lights/Models/Sloth_Sign_SLOTH
-MRUItem12=/Game/Environment/Bar_Assets/neon_lights/Models/Merged_7Sins_Logo
-MRUItem13=/Game/Environment/Bar_Assets/neon_lights/Models/Lust_Sign_LUST
-MRUItem14=/Game/Environment/Bar_Assets/neon_lights/Models/Greed_Sign_GREED
-MRUItem15=/Game/Environment/Bar_Assets/neon_lights/Models/Gluttony_Sign_GLUTTONY
-MRUItem16=/Game/Environment/Bar_Assets/neon_lights/Models/Ghost_Sign_GHOST
-MRUItem17=/Game/Environment/Bar_Assets/neon_lights/Models/Envy_Sign_ENVY
-MRUItem18=/Game/Environment/Bar_Assets/neon_lights/Models/Angel_Devil_sign_ANGELDEVIL
-MRUItem19=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_sweep30
-MRUItem20=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_SPADE
-MRUItem21=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_S1
-MRUItem22=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_S
-MRUItem23=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_N
-MRUItem24=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_I_DOT
-MRUItem25=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_I
-MRUItem26=/Game/Environment/jess_props/Models/POKER/Poker_Chip_8
-MRUItem27=/Game/Environment/jess_props/Models/POKER/Poker_Chip_7
-MRUItem28=/Game/Environment/jess_props/Models/POKER/Poker_Chip_6
+MRUItem0=/Game/Environment/Bar_Assets/neon_lights/Materials/MI_Neon_Lights
+MRUItem1=/Game/Environment/Bar_Assets/7SINS
+MRUItem2=/Game/Environment/Bar_Assets/neon_lights/Textures/T_Neons_Emissive
+MRUItem3=/Game/Environment/Bar_Assets/neon_lights/Textures/T_Neons_BASECOLOUR
+MRUItem4=/Game/Environment/jess_props/Materials/props_material_jess
+MRUItem5=/Game/Environment/jess_props/Textures/T_PROPS_BASECOLOUR
+MRUItem6=/Game/Environment/Bar_Assets/Materials/M_Minigame_props
+MRUItem7=/Game/Environment/Bar_Assets/neon_lights/Models/Pride_Sign_PRIDE
+MRUItem8=/Game/Environment/Bar_Assets/Materials/MI_Floor_01
+MRUItem9=/Game/Environment/Custom_Props/Materials/Plants
+MRUItem10=/Game/Environment/Bar_Assets/Materials/M_Basematerial
+MRUItem11=/Game/Environment/Bar_Assets/neon_lights/Models/Wrath_Sign
+MRUItem12=/Game/Environment/Bar_Assets/neon_lights/Models/Sloth_Sign_SLOTH
+MRUItem13=/Game/Environment/Bar_Assets/neon_lights/Models/Merged_7Sins_Logo
+MRUItem14=/Game/Environment/Bar_Assets/neon_lights/Models/Lust_Sign_LUST
+MRUItem15=/Game/Environment/Bar_Assets/neon_lights/Models/Greed_Sign_GREED
+MRUItem16=/Game/Environment/Bar_Assets/neon_lights/Models/Gluttony_Sign_GLUTTONY
+MRUItem17=/Game/Environment/Bar_Assets/neon_lights/Models/Ghost_Sign_GHOST
+MRUItem18=/Game/Environment/Bar_Assets/neon_lights/Models/Envy_Sign_ENVY
+MRUItem19=/Game/Environment/Bar_Assets/neon_lights/Models/Angel_Devil_sign_ANGELDEVIL
+MRUItem20=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_sweep30
+MRUItem21=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_SPADE
+MRUItem22=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_S1
+MRUItem23=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_S
+MRUItem24=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_N
+MRUItem25=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_I_DOT
+MRUItem26=/Game/Environment/Bar_Assets/neon_lights/Models/7_Sins_Sign_I
+MRUItem27=/Game/Environment/jess_props/Models/POKER/Poker_Chip_8
+MRUItem28=/Game/Environment/jess_props/Models/POKER/Poker_Chip_7
+MRUItem29=/Game/Environment/jess_props/Models/POKER/Poker_Chip_6
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3306,7 +3309,7 @@ MapSkeletalMotionToRoot=False
 bExportLocalTime=True
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
