Found OG Jess' neons

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,7 +174,7 @@ MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails
 GeneralProjectSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 CryptoKeysSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 GameplayTagsSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
@@ -1730,37 +1730,38 @@ RecentAssetEditors=
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
+OpenAssetsAtExit=/Game/Environment/neon_lights/NEON_LIGHTS.NEON_LIGHTS
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Environment/jess_props/Dart
-MRUItem1=/Game/Environment/jess_props/props_material_jess
-MRUItem2=/Game/Environment/jess_props/POOL/Pool_Ball_White
-MRUItem3=/Game/Environment/jess_props/POOL/Pool_Ball_15
-MRUItem4=/Game/Environment/jess_props/POOL/Pool_Ball_14
-MRUItem5=/Game/Environment/jess_props/POOL/Pool_Ball_13
-MRUItem6=/Game/Environment/jess_props/POOL/Pool_Ball_12
-MRUItem7=/Game/Environment/jess_props/POOL/Pool_Ball_11
-MRUItem8=/Game/Environment/jess_props/POOL/Pool_Ball_10
-MRUItem9=/Game/Environment/jess_props/POOL/Pool_Ball_9
-MRUItem10=/Game/Environment/jess_props/POOL/Pool_Ball_8
-MRUItem11=/Game/Environment/jess_props/POOL/Pool_Ball_7
-MRUItem12=/Game/Environment/jess_props/POOL/Pool_Ball_6
-MRUItem13=/Game/Environment/jess_props/POOL/Pool_Ball_5
-MRUItem14=/Game/Environment/jess_props/POOL/Pool_Ball_4
-MRUItem15=/Game/Environment/jess_props/POOL/Pool_Ball_3
-MRUItem16=/Game/Environment/jess_props/POOL/Pool_Ball_2
-MRUItem17=/Game/Environment/jess_props/POOL/Pool_Ball_1
-MRUItem18=/Game/Environment/jess_props/POKER/Poker_Chip_8
-MRUItem19=/Game/Environment/jess_props/POKER/Poker_Chip_7
-MRUItem20=/Game/Environment/jess_props/POKER/Poker_Chip_6
-MRUItem21=/Game/Environment/jess_props/POKER/Poker_Chip_5
-MRUItem22=/Game/Environment/jess_props/POKER/Poker_Chip_4
-MRUItem23=/Game/Environment/jess_props/POKER/Poker_Chip_3
-MRUItem24=/Game/Environment/jess_props/POKER/Poker_Chip_2
-MRUItem25=/Game/Environment/jess_props/POKER/Poker_Chip_1
-MRUItem26=/Game/Environment/FirstPerson/Maps/FirstPersonMap
-MRUItem27=/Game/Environment/jess_props/Dart_Board_2
-MRUItem28=/Game/Environment/neon_lights/NEON_LIGHTS
+MRUItem0=/Game/Environment/neon_lights/NEON_LIGHTS
+MRUItem1=/Game/Environment/jess_props/Dart
+MRUItem2=/Game/Environment/jess_props/props_material_jess
+MRUItem3=/Game/Environment/jess_props/POOL/Pool_Ball_White
+MRUItem4=/Game/Environment/jess_props/POOL/Pool_Ball_15
+MRUItem5=/Game/Environment/jess_props/POOL/Pool_Ball_14
+MRUItem6=/Game/Environment/jess_props/POOL/Pool_Ball_13
+MRUItem7=/Game/Environment/jess_props/POOL/Pool_Ball_12
+MRUItem8=/Game/Environment/jess_props/POOL/Pool_Ball_11
+MRUItem9=/Game/Environment/jess_props/POOL/Pool_Ball_10
+MRUItem10=/Game/Environment/jess_props/POOL/Pool_Ball_9
+MRUItem11=/Game/Environment/jess_props/POOL/Pool_Ball_8
+MRUItem12=/Game/Environment/jess_props/POOL/Pool_Ball_7
+MRUItem13=/Game/Environment/jess_props/POOL/Pool_Ball_6
+MRUItem14=/Game/Environment/jess_props/POOL/Pool_Ball_5
+MRUItem15=/Game/Environment/jess_props/POOL/Pool_Ball_4
+MRUItem16=/Game/Environment/jess_props/POOL/Pool_Ball_3
+MRUItem17=/Game/Environment/jess_props/POOL/Pool_Ball_2
+MRUItem18=/Game/Environment/jess_props/POOL/Pool_Ball_1
+MRUItem19=/Game/Environment/jess_props/POKER/Poker_Chip_8
+MRUItem20=/Game/Environment/jess_props/POKER/Poker_Chip_7
+MRUItem21=/Game/Environment/jess_props/POKER/Poker_Chip_6
+MRUItem22=/Game/Environment/jess_props/POKER/Poker_Chip_5
+MRUItem23=/Game/Environment/jess_props/POKER/Poker_Chip_4
+MRUItem24=/Game/Environment/jess_props/POKER/Poker_Chip_3
+MRUItem25=/Game/Environment/jess_props/POKER/Poker_Chip_2
+MRUItem26=/Game/Environment/jess_props/POKER/Poker_Chip_1
+MRUItem27=/Game/Environment/FirstPerson/Maps/FirstPersonMap
+MRUItem28=/Game/Environment/jess_props/Dart_Board_2
 MRUItem29=/Game/Environment/Street_Assets/Materials/graffiti_decals/Jess
 
 [DetailCategories]
